# retro-cli

./: .gitignore  README.md  pyproject.toml
retro/: __init__.py  __main__.py  app.py  backend.py  persistence.py
retro/net/: client.py  network.py
