[tool.poetry]
name = "retro"
version = "0.1.1"
description = "A cli tool for distributed team retros (build in a few hours)"
authors = ["Maic Siemering <maic@siemering.tech>"]

[tool.poetry.dependencies]
python = "^3.8.1"
prompt-toolkit = "^3.0.43"
colorama = "^0.4.4"
pyngrok = "^7.1.2"
cryptography = "^42.0.4"
atomicwrites = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
retro = "retro.__main__:main"
