[project]
name = "retro"
version = "0.1.1"
description = "A cli tool for distributed team retros (build in a few hours)"
authors = [{ name = "Maic Siemering", email = "maic@siemering.tech" }]
requires-python = ">=3.8.1"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "colorama>=0.4.6",
    "pyngrok>=7.2.12",
    "cryptography>=46.0.7",
    "atomicwrites>=1.4.1",
]

[project.scripts]
retro = "retro.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
